# EMC2_ros2_hw_interface

./: README.md
diff_bot/: CMakeLists.txt  package.xml
diff_bot/config/: diff_drive_controller.yaml  robot_rviz_sim_view.rviz  robot_rviz_view.rviz
diff_bot/launch/: robot_server.launch.py  rsp.launch.py  rviz_client.launch.py  rviz_view.launch.py
diff_bot/urdf/: robot_core.xacro  robot_urdf.xacro
diff_bot/urdf/controllers/: emc2_hw_ros2_control.xacro  transmission_macros.xacro
diff_bot/urdf/sensors/: sonar.xacro
emc2_ros2_arduino_driver_interface/: CMakeLists.txt  README.md  emc2_ros2_arduino_driver_interface.xml  package.xml
emc2_ros2_arduino_driver_interface/hardware/: emc2_system.cpp
emc2_ros2_arduino_driver_interface/hardware/include/emc2_ros2_arduino_driver_interface/: emc2_arduino_comms.hpp  emc2_system.hpp  motor.hpp  visibility_control.h
emc2_ros2_arduino_driver_interface/sample_ros2_control/: emc2_sample_ros2_control.xacro
emc2_ros2_arduino_driver_interface/sample_ros2_control_file/: emc2_hw_ros2_control.xacro  emc2_sample_ros2_control.xacro  transmission_macros.xacro
my_diff_bot/: CMakeLists.txt  package.xml
my_diff_bot/config/: diff_drive_controller.yaml  robot_rviz_sim_view.rviz  robot_rviz_view.rviz
my_diff_bot/launch/: my_diff_bot.launch.py  rsp.launch.py  rviz_view.launch.py
my_diff_bot/urdf/: color_materials.xacro  face_macro.xacro  inertia_macros.xacro  part_macros.xacro  ros_controllers.xacro  transmission_macros.xacro  urdf_description.xacro
